<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/grey"
        tools:context=".TitleFragment">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_text"
            android:textAlignment="center"
            android:textSize="@dimen/recipe_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/recipe_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:background="@color/purple_200"
            android:fontFamily="sans-serif-light"
            android:text="@string/recipe_one_name"
            android:textAlignment="viewStart"
            android:textSize="@dimen/recipe_text_size" />

        <TextView
            android:id="@+id/recipe_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:background="@color/green"
            android:fontFamily="sans-serif-light"
            android:text="@string/recipe_two_name"
            android:textAlignment="viewStart"
            android:textSize="@dimen/recipe_text_size" />

        <TextView
            android:id="@+id/recipe_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:background="@color/yellow"
            android:fontFamily="sans-serif-light"
            android:text="@string/recipe_three_name"
            android:textAlignment="viewStart"
            android:textSize="@dimen/recipe_text_size" />

        <TextView
            android:id="@+id/recipe_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:background="@color/red"
            android:fontFamily="sans-serif-light"
            android:text="@string/recipe_four_name"
            android:textAlignment="viewStart"
            android:textSize="@dimen/recipe_text_size" />

        <TextView
            android:id="@+id/recipe_five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:background="@color/teal_200"
            android:fontFamily="sans-serif-light"
            android:text="@string/recipe_five_name"
            android:textAlignment="viewStart"
            android:textSize="@dimen/recipe_text_size" />
    </LinearLayout>
</layout>