<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green"
        tools:context=".RecipeTwoFragment" >

        <ImageView
            android:id="@+id/image_two"
            android:layout_width="0dp"
            android:layout_height="@dimen/image_height_value"
            android:layout_marginStart="@dimen/margin_size"
            android:layout_marginTop="@dimen/margin_size"
            android:layout_marginEnd="@dimen/margin_size"
            android:contentDescription="@string/content_description"
            android:src="@drawable/chicken"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ingredients_two"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_size"
            android:layout_marginTop="@dimen/margin_size"
            android:layout_marginBottom="@dimen/margin_size"
            android:text="@string/ingredients_two_text"
            android:textAlignment="viewStart"
            android:textSize="@dimen/ingredients_size"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_two" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_size"
            android:layout_marginEnd="@dimen/margin_size"
            android:layout_marginBottom="@dimen/margin_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ingredients_two"
            app:layout_constraintTop_toBottomOf="@+id/image_two">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/description_two"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/description_two_text"
                    android:textSize="@dimen/scroll_text_size" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>